# bazel-examples

./: .appveyor.yml  .gitignore  BUILD  Readme.md  WORKSPACE  catch2_test.cpp  gtest_test.cpp  hello_world.cpp  my_lib.h  script.ps1
.bazelci/: cpp.yml  cpp_and_python.yml  cpp_coverage.yml  multilanguage.yml  presubmit.yml  python.yml  rust.yml  third_party_dependencies.yml
cpp/: .bazelrc  BUILD  MODULE.bazel  Readme.md  catch2_test.cpp  ci_execution.ps1  my_lib.cpp
cpp_and_python/: .bazelrc  BUILD  MODULE.bazel  Readme.md  ci_execution.ps1  code_dive.txt
cpp_coverage/: .bazelrc  BUILD  MODULE.bazel  Readme.md  WORKSPACE  bar.cpp  bar.h  ci_execution.ps1  foo.cpp  foo.h  foo_test.cpp  main.cpp
linux_toolchain/: .bazelrc  BUILD  MODULE.bazel  Readme.md  WORKSPACE  ci_execution.ps1
linux_toolchain/platform/: BUILD
linux_toolchain/toolchain/: BUILD  cc_toolchain_config.bzl  cc_wrapper.sh  deps_scanner_wrapper.sh
multilanguage/: .bazelrc  MODULE.bazel  ci_execution.ps1  ndc_techtown.txt
python/: .bazelrc  BUILD  MODULE.bazel  Readme.md  bin.py  ci_execution.ps1  lib.py  test.py
python_linting/: BUILD  main.py  my_lib.py
rust/: BUILD  MODULE.bazel  Readme.md  hello_world.rs  my_lib.rs
windows_toolchain/: .bazelrc  BUILD  MODULE.bazel  Readme.md  WORKSPACE  ci_execution.ps1
windows_toolchain/platform/: BUILD
windows_toolchain/toolchain/: BUILD  get_env.bat  msvc_deps_scanner_wrapper_arm.bat  msvc_deps_scanner_wrapper_arm64.bat  msvc_deps_scanner_wrapper_x64.bat  msvc_deps_scanner_wrapper_x86.bat  utils.bzl  windows_cc_toolchain_config.bzl
(+23 files in other folders)
