bazel_dep(name = "buildifier_prebuilt", version = "8.2.1", dev_dependency = True)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")

# Next line should be commented out if you want to follow the Readme.md instructions
register_toolchains("//toolchain:my_linux_toolchain")
